objects/Account.object
<CustomObject>
    <fields>
        <fullName>SDO_SPM_Region_Auto_Calc__c</fullName>
        <description>SPM Sales Planning demo field 9-5-23 Aaron Bendickson</description>
        <formula>CASE( BillingCountry ,&quot;USA&quot;, &quot;USA&quot;,&quot;United States&quot;, &quot;USA&quot;,&quot;US&quot;, &quot;USA&quot;,&quot;Canada&quot;, &quot;CAN&quot;,&quot;CAN&quot;, &quot;CAN&quot;,&quot;CA&quot;, &quot;CA&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (Auto-Calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Segment_Auto_Calc__c</fullName>
        <description>SDO SPM Sales Planning demo field created by Aaron Bendickson 9-11-2023</description>
        <formula>IF( AnnualRevenue &lt;= 3000000, &quot;SMB&quot;,
IF( AND( AnnualRevenue &gt; 3000000, AnnualRevenue &lt;= 5000000), &quot;Commercial&quot;,
IF( AnnualRevenue &gt; 5000000, &quot;Enterprise&quot;, &quot;SMB&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment (Auto-Calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Segment_Formatted__c</fullName>
        <description>SPM Sales Planning demo field 9-5-23 Aaron Bendickson</description>
        <formula>SDO_SPM_Region_Auto_Calc__c + &quot;-&quot; + SDO_SPM_Segment_Auto_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combines Region and Segment to create a formatted Segment name</inlineHelpText>
        <label>Segment (Formatted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Software_Revenue__c</fullName>
        <description>SPM Sales Planning Demo Field 9-5-23 Aaron Bendickson</description>
        <label>Software Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_SPM_Upside_Potential__c</fullName>
        <description>SPM Sales Planning Demo Field 9-5-23 Aaron Bendickson</description>
        <label>Upside Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Account_Plan_Details__c</fullName>
        <label>Account Plan Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Account_Plan_Filled_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Plan Filled in?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Lost_Opptys__c</fullName>
        <description>What: Used in Reporting for Open vs Closed Opptys</description>
        <label>Closed Lost Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Won_Opptys__c</fullName>
        <description>What: Closed Won Oppty Field Roll-up</description>
        <label>Closed Won Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Closed_Won_Value__c</fullName>
        <description>What: This is automatically calculated from closed opportunities.</description>
        <inlineHelpText>This is automatically calculated from closed opportunities.</inlineHelpText>
        <label>Total Sales</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Current_Year_Revenue_Goal__c</fullName>
        <description>What: Current year Revenue Goal</description>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Goal_Attainment__c</fullName>
        <description>What: Measure of YTD Revenue vs. Goal</description>
        <formula>SDO_YTD_Revenue_Generated__c  /  SDO_Sales_Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Conversion_Rate__c</fullName>
        <description>What: Sales Lead Conversion Rate.</description>
        <formula>if( AND(NULLVALUE(SDO_Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(SDO_Sales_Number_Leads_Total__c, 0)&lt;&gt;0), SDO_Number_Leads_Converted__c / SDO_Sales_Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_To_Opportunity_Close_Rate__c</fullName>
        <description>What: Close rate field. Used in multiple reports.</description>
        <formula>if( AND(NULLVALUE(SDO_Sales_Num_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SDO_Number_Leads_Converted__c, 0)&lt;&gt;0), SDO_Sales_Num_Closed_Won_Opportunities__c / SDO_Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Num_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Num_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What: Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Open_Oppty_Value__c</fullName>
        <description>What: Display total value of all open opptys by account.</description>
        <label>Open Oppty Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Open_Opptys__c</fullName>
        <description>What: Open Opptys by Account. Who: Sales Team.</description>
        <label>Open Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Opportunity_Win_Rate__c</fullName>
        <description>What: Sales field for Opportunity Win Rate.</description>
        <formula>if( AND(NULLVALUE(SDO_Sales_Num_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SDO_Sales_Number_Closed_Opportunities__c, 0)&lt;&gt;0), SDO_Sales_Num_Closed_Won_Opportunities__c / SDO_Sales_Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Rating_Indicator__c</fullName>
        <description>What: used in Channel Plans reporting</description>
        <formula>IMAGE(&apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;&apos;,0,0) &amp;
IMAGE(IF (SDO_Value__c &gt; 0, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 1, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 2, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 3, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(IF (SDO_Value__c &gt; 4, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon_star.png&apos;, &apos;https://qnextgen.s3.us-west-1.amazonaws.com/logos/Icon-+Star+Off.png&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Region__c</fullName>
        <description>What: Used to regionalize sales information</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Value_Closed_Won_Opportunties__c</fullName>
        <description>What: Value of closed won opptys.</description>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Customer_Satisfaction_Index__c</fullName>
        <description>What: What does this customer think of us? This is used in reports</description>
        <inlineHelpText>What does this customer think of us?</inlineHelpText>
        <label>Customer Satisfaction Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Extremely Satisfied - Customer Evangelist</fullName>
                </value>
                <value>
                    <fullName>B - Satisfied</fullName>
                </value>
                <value>
                    <fullName>C - Neutral</fullName>
                </value>
                <value>
                    <fullName>D - Dissatisfied - At risk of losing business</fullName>
                </value>
                <value>
                    <fullName>F - Unsatisfactory - Losing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Value_Open_Opportunties__c</fullName>
        <description>What: Total Value of Open Opptys for Partner Account</description>
        <label>Value of Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Value__c</fullName>
        <description>What: This field drives the Value Indicator field.  Enter a value of 1-5.</description>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_YTD_Revenue_Generated__c</fullName>
        <description>What: YTD Revenue Generated for Partner Account</description>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Default_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Store</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>DefaultStoreAccounts</relationshipLabel>
        <relationshipName>DefaultStoreAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>SPM Maps Tier Picklist</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Gifts__c</fullName>
        <description>Created for Dreamforce 23 Fundraising Demo</description>
        <inlineHelpText>Created for Dreamforce 23 Fundraising Demo</inlineHelpText>
        <label>Total Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>false</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantseeking_Organization</fullName>
        <active>true</active>
        <description>Business Account representing an external organization that is grantseeking or a grant recipient</description>
        <label>Grantseeking Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>Business Account representing a family unit of individuals</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Client_Household</fullName>
        <active>true</active>
        <description>Business Account representing a family unit of individuals related to a Case Management client</description>
        <label>Client Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Supporter_Household</fullName>
        <active>true</active>
        <label>Supporter Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Account_Partner</fullName>
        <active>false</active>
        <description>Partner accounts with additional, channel-related information like the Partner
        Scorecard.</description>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Account_Simple</fullName>
        <active>false</active>
        <description>Primary Account record type used for most account records.</description>
        <label>Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>